feat: implement lessons slice, group and individual lessons, templates and the ability to cancel a lesson
