# internal/lessons/create_group/dto.go
@@ -1,0 +1,18 @@
+package create_group
+
+import "github.com/google/uuid"
+
+type Request struct {
+	BranchID  uuid.UUID `json:"branch_id" validate:"required"`
+	TeacherID uuid.UUID `json:"teacher_id" validate:"required"`
+	SubjectID uuid.UUID `json:"subject_id" validate:"required"`
+	GroupID   uuid.UUID `json:"group_id" validate:"required"`
+	Date      string    `json:"date" validate:"required,datetime=2006-01-02"`
+	StartTime string    `json:"start_time" validate:"required"`
+	EndTime   string    `json:"end_time" validate:"required"`
+}
+
+type Response struct {
+	ID     uuid.UUID `json:"id"`
+	Status string    `json:"status"`
+}
